Changes to the header in the index.html
Changes to the header in the index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Content Coming Soon. Stay Tuned</h2>
+<h2>Content Coming Soon. Stay Tuned, Folks</h2>
 </body>
 </html>
