Addition of a css file
- css file
- changes to the header

--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h2>Content Coming Soon. Stay Tuned, Folks</h2>
-</body>
+
+	<head>
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
+
+	<body>
+
+		<div id="wrapper">
+			
+			<div id="header">
+				GeorgeFoulds.com
+			</div>
+
+		</div>
+
+	</body>
+
 </html>
