Building of the page header
Building of the page header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 
 		<div id="wrapper">
 			
-			<div id="header">
+			<div id="header_welcome_message">
+				Welcome to
+			</div>
+
+			<div id="header_main">
 				GeorgeFoulds.com
+			</div>
+
+		</br>
+
+			<div id="subheading">
+				A homepage for everything me!
 			</div>
 
 		</div>
