Changes to appease Evie
Changes to appease Evie

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</br>
 
 			<div id="subheading">
-				A homepage for everything me!
+				A homepage for everything George!
 			</div>
 
 		</div>
