--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 
 	<body>
 
-		<div id="wrapper">
+		<div id="header_wrapper">
 			
 			<div id="header_welcome_message">
 				Welcome to
 			</div>
 
-			<div id="header_main">
+			<div id="header_title">
 				GeorgeFoulds.com
 			</div>
 
 		</br>
 
-			<div id="subheading">
+			<div id="header_subheading">
 				A homepage for everything George!
 			</div>
 
