--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
 
 		</div>
 
+		</br>
+
+		<div id='cssmenu'>
+			<ul>
+   				<li class='active'><a href='index.html'>Home</a></li>
+   				<li><a href='about-me.html'>About Me</a></li>
+   				<li><a href='curriculum-vitae'>Curriculum Vitae</a></li>
+   				<li><a href='contact-me'>Contact Me</a></li>
+			</ul>
+		</div>
+
 	</body>
 
 </html>
