--- a/index.html
+++ b/index.html
@@ -5,37 +5,32 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 
-	<body>
+	<div id="site_wrapper">
 
-		<div id="header_wrapper">
-			
-			<div id="header_welcome_message">
-				Welcome to
+		<body>
+
+			<div id="header_wrapper">
+				
+				<div id="header_welcome_message">
+					Welcome to
+				</div>
+
+				<div id="header_title">
+					GeorgeFoulds.com
+				</div>
+
+			</br>
+
+				<div id="header_subheading">
+					A homepage for everything George!
+				</div>
+
 			</div>
 
-			<div id="header_title">
-				GeorgeFoulds.com
-			</div>
+			</br>
 
-		</br>
+		</body>
 
-			<div id="header_subheading">
-				A homepage for everything George!
-			</div>
-
-		</div>
-
-		</br>
-
-		<div id='cssmenu'>
-			<ul>
-   				<li class='active'><a href='index.html'>Home</a></li>
-   				<li><a href='about-me.html'>About Me</a></li>
-   				<li><a href='curriculum-vitae'>Curriculum Vitae</a></li>
-   				<li><a href='contact-me'>Contact Me</a></li>
-			</ul>
-		</div>
-
-	</body>
+</div>
 
 </html>
