Changes to the subheading
Changes to the subheading

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</br>
 
 				<div id="header_subheading">
-					A homepage for everything George!
+					I'm just this guy, you know?
 				</div>
 
 			</div>
