--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 	</head>
 
 	<div id="site_wrapper">
