--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
-		<title>Welcome!</title>
+		<title>GeorgeFoulds.com - Welcome!</title>
 	</head>
 
 	<div id="site_wrapper">
