--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
 			</br>
 
 				<div id="header_subheading">
-					I'm just this guy, you know?
+					My personal homepage and online CV
+						</br>
+						</br>
+					<img src="Images/Headshot.png" alt="Author photo" style="width:75px;height:75px;">
 				</div>
 
 			</div>
 
 			</br>
-
+			
 		</body>
 
 </div>
