--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					My personal homepage and online CV
 						</br>
 						</br>
-					<img src="Images/Headshot.png" alt="Author photo" style="width:75px;height:75px;">
+					<img src="Images/HeadShot.png" alt="Author photo" style="width:75px;height:75px;">
 				</div>
 
 			</div>
