Update to tagline
As per the above

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+  		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 		<title>Welcome!</title>
@@ -24,7 +28,7 @@
 			</br>
 
 				<div id="header_subheading">
-					My personal homepage and online CV
+					My personal homepage
 						</br>
 						</br>
 					<img src="Images/HeadShot.png" alt="Author photo" style="width:75px;height:75px;">
@@ -33,9 +37,20 @@
 			</div>
 
 			</br>
-			
+			</br>
+
+			<div id="main_content">
+
+					<div id="body_text">
+
+						  
+					
+					</div> 
+
+			</div>
+
 		</body>
 
-</div>
+	</div>
 
 </html>
