Updated the subheading (again)
nothing to see here, move along

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</br>
 
 				<div id="header_subheading">
-					My personal homepage
+					I'm just this guy, you know
 						</br>
 						</br>
 					<img src="Images/HeadShot.png" alt="Author photo" style="width:75px;height:75px;">
